# LLMux

./: .gitignore  README.md  demo streaming.py  demo-image.py  demo-mcp.py  demo-tools.py  demo.py  get models.py  get_models.py  llmclient.py  main.py  mcp_client.py  pyproject.toml  unified_demo.py
docs/: api-reference.md  examples.md
llmclient/: __init__.py  client.py  utils.py
llmclient/providers/: __init__.py  anthropic.py  base.py  gemini.py  huggingface.py  openai.py
llmux/: __init__.py  client.py  rich_llm_printer.py  types.py  utils.py
llmux/providers/: anthropic.py  base.py  gemini.py  huggingface.py  openai.py
tests/: conftest.py  test_client.py  test_providers.py  test_utils.py
