[project]
name = "llmux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "mcp>=1.0.0",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
